[package]
name = "numerapi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["cargo", "derive", "env", "string", "unicode"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"], optional = true }


[features]
# default = ["reqwest/async-tls"]
default = ["blocking", "reqwest"]
async = ["tokio/full"]
blocking = ["reqwest/blocking"]
tokio = ["dep:tokio"]
reqwest = ["reqwest/json"]

[[bin]]
name = "numerapi"
path = "src/cli.rs"

[lib]
name = "libnumerapi"
path = "src/lib.rs"
# crate-type = ["cdylib"]
